importação dos pacotes e refatoração do Locale